--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
     padding: 0px;
-    background:black;
+    background: black;
     background-size: 100%;
 }
 
@@ -11,6 +11,7 @@ body{
     background-image: url(../img/sol.png);
     border-radius: 50%;
     background-size: cover;
+    background-color: #f9c05f;
     box-shadow: -4px 2px 56px #f9c05f;
     position: absolute;
     left: 50%;
