--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
     background-size: 100%;
 }
 
+/*Sol*/
 .sun{
     height: 120px;
     width: 120px;
@@ -19,6 +20,7 @@ body{
     transform: translate(-50%,-50%);
 }
 
+/*Mercurio*/
 .mercury{
     height: 20px;
     width: 20px;
@@ -32,6 +34,7 @@ body{
     animation: orbit-mercury 2s linear infinite;
 }
 
+/*Animação da orbita de Mercurio*/
 @keyframes orbit-mercury{
     from{
         transform: rotate(0deg) translateX(70px) rotate(0deg);    
@@ -41,6 +44,7 @@ body{
     }
 }
 
+/*Estilo do paragrafo*/
 p{
     color: #fff;
     font-family: system-ui;
@@ -64,6 +68,7 @@ p{
     width: 140px;
 }
 
+/*Venus*/
 .venus{
     height: 40px;
     width: 40px;
@@ -82,6 +87,7 @@ p{
     width: 200px;
 }
 
+/*Animação da orbita de Venus*/
 @keyframes orbit-venus{
     from{
         transform: rotate(0deg) translateX(100px) rotate(0deg);    
@@ -91,6 +97,7 @@ p{
     }
 }
 
+/*Terra*/
 .earth{
     height: 50px;
     width: 50px;
@@ -131,6 +138,7 @@ p{
     animation: orbit-earth-inner 3s linear infinite
 }
 
+/*Animação da orbita da Terra*/
 @keyframes orbit-earth{
     from{
         transform: rotate(0deg) translateX(150px) rotate(0deg);    
@@ -140,6 +148,7 @@ p{
     }
 }
 
+/*Animação da orbita da Lua*/
 @keyframes orbit-earth-inner{
     from{
         transform: rotate(0deg) translateX(33px) rotate(0deg);    
@@ -149,6 +158,7 @@ to{
     }
 }
 
+/*Marte*/
 .mars{
     height: 30px;
     width: 30px;
@@ -166,6 +176,7 @@ to{
     width: 370px;
 }
 
+/*Animação da orbita de Marte*/
 @keyframes orbit-mars{
     from{
         transform: rotate(0deg) translateX(185px) rotate(0deg);    
@@ -175,6 +186,7 @@ to{
     }
 }
 
+/*Jupiter*/
 .jupiter{
     height: 40px;
     width: 40px;
@@ -192,6 +204,7 @@ to{
     width: 430px;
 }
 
+/*Animação da orbita de Jupiter*/
 @keyframes orbit-jupiter{
     from{
         transform: rotate(0deg) translateX(217px) rotate(0deg);    
@@ -201,6 +214,7 @@ to{
     }
 }
 
+/*Saturno*/
 .saturn{
     height: 50px;
     width: 50px;
@@ -217,7 +231,7 @@ to{
     height: 500px;
     width: 500px;
 }
-
+/*Animação da orbita de Saturno*/
 @keyframes orbit-saturn{
     from{
         transform: rotate(0deg) translateX(250px) rotate(0deg);    
@@ -227,6 +241,7 @@ to{
     }
 }
 
+/*Urano*/
 .uranus{
     height: 30px;
     width: 30px;
@@ -244,6 +259,7 @@ to{
     width: 560px;
 }
 
+/*Animação da orbita de Urano*/
 @keyframes orbit-uranus{
     from{
         transform: rotate(0deg) translateX(280px) rotate(0deg);    
@@ -253,6 +269,7 @@ to{
     }
 }
 
+/*Netuno*/
 .neptune{
     height: 30px;
     width: 30px;
@@ -270,6 +287,7 @@ to{
     width: 620px;
 }
 
+/*Animação da orbita de Netuno*/
 @keyframes orbit-neptune{
     from{
         transform: rotate(0deg) translateX(310px) rotate(0deg);    
@@ -279,6 +297,7 @@ to{
     }
 }
 
+/*Descrição dos planetas*/
 ul.solarsystem {
     position: relative;
     height: 640px;
